fix: layout content alignment

--- a/src/components/Layout/style.module.css
+++ b/src/components/Layout/style.module.css
@@ -3,5 +3,7 @@
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
     padding-top: var(--header-height);
 }
